# tumoroscope-pymc

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CITATION.cff  README.ipynb  README.md  conda.yaml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: pytest.yaml
tests/: conftest.py  test__init__.py  test_mock_data.py  test_tumoroscope.py  test_tumoroscope_data.py
tumoroscope/: __init__.py  data_validation.py  mock_data.py  model.py  tumoroscope_data.py  utilities.py
