[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tumoroscope-pymc"
authors = [{name = "Joshua Cook", email = "joshuacook0023@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "numpy >= 1.23.0",
    "pymc >= 4.0.0",
]

[tool.flit.module]
name = "tumoroscope"

[project.urls]
Home = "https://github.com/jhrcook/tumoroscope-pymc"
